(library
 (name            libsecp256k1)
 (public_name     secp256k1)
 (modules         secp256k1)
 (libraries       bigstring cstruct)
 (c_names         secp256k1)
 (c_flags         (:include c_flags.sexp))
 (c_library_flags (-lgmp)))

(rule
 (targets c_flags.sexp)
 (action  (run %{exe:config/discover.exe} -ocamlc %{ocaml})))
